Actualizar documentación y validaciones en los controladores y modelos para incluir campo 'address' como objeto, además de ajustar la migración y la factory del modelo Service
