# TFM2_api/app/Models/Service.php
@@ -15,7 +15,7 @@ use Illuminate\Database\Eloquent\Model;
  *     @OA\Property(property="id", type="integer", example=10),
  *     @OA\Property(property="name", type="string", example="Computer Repair"),
  *     @OA\Property(property="description", type="string", example="Repair and maintenance of laptops and PCs"),
- *     @OA\Property(property="price", type="string", format="float", example=49.99),
+ *     @OA\Property(property="price", type="string", example="49.99"),
  *     @OA\Property(property="user_id", type="integer", example=2),
  *     @OA\Property(property="subcategory_id", type="integer", example=5),
  *     @OA\Property(property="user", ref="#/components/schemas/User"),
@@ -41,6 +41,7 @@ class Service extends Model
 
     protected $casts = [
         'price' => 'decimal:2',
+        'address' => 'array',
     ];
 
     public function user() {
